# delta-kernel-rs

./: .gitignore  Cargo.toml  DATAFUSION_INTEGRATION.md  DATAFUSION_INTEGRATION_COMPLETE.md  DATAFUSION_INTEGRATION_SUMMARY.md  FFI_EXPOSURE_PLAN.md  FINAL_STATUS.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  KERNEL_BUG_REPORT.md  MERGE_STATUS.md  NEW_DATA_SKIPPING_TEST.txt  SESSION_SUMMARY.md  STATE_MACHINE_COMPLETE.md  STATE_MACHINE_CURRENT_STATUS.md  STATE_MACHINE_FINAL.md  STATE_MACHINE_IMPLEMENTATION.md  oss_delta_read_path_analysis.md
.cursor/plans/: state-machine-architecture-6aa95509.plan.md
.github/workflows/: benchmark.yml  build.yml
acceptance/: Cargo.toml  IMPROVED_DAT_TEST_RESULTS.md  build.rs
acceptance/src/: lib.rs  meta.rs
acceptance/tests/: acceptance_workloads_datafusion.rs  acceptance_workloads_reader.rs  dat_reader.rs  dat_reader_datafusion.rs  improved_dat_reader.rs  write_replay_test.rs
acceptance_workloads/DV-001/: table_info.json  test_info.json
acceptance_workloads/DV-002/: table_info.json  test_info.json
acceptance_workloads/DV-003/: table_info.json  test_info.json
acceptance_workloads/DV-004/: table_info.json  test_info.json
acceptance_workloads/DV-005a/: table_info.json  test_info.json
acceptance_workloads/DV-005b/: table_info.json  test_info.json
acceptance_workloads/DV-006/: table_info.json  test_info.json
acceptance_workloads/DV-007/: table_info.json  test_info.json
acceptance_workloads/DV-008/: table_info.json  test_info.json
acceptance_workloads/DV-009/: table_info.json  test_info.json
acceptance_workloads/DV-010/: table_info.json  test_info.json
acceptance_workloads/DV-011/: table_info.json  test_info.json
acceptance_workloads/DV-012/: table_info.json  test_info.json
acceptance_workloads/DV-013/: table_info.json  test_info.json
acceptance_workloads/DV-014/: table_info.json  test_info.json
acceptance_workloads/DV-015/: table_info.json  test_info.json
acceptance_workloads/DV-016/: table_info.json  test_info.json
acceptance_workloads/DV-017/: table_info.json  test_info.json
acceptance_workloads/DV-018/: table_info.json  test_info.json
acceptance_workloads/cc_001_create_with_constraint/: table_info.json  test_info.json
acceptance_workloads/cc_002_show_tblproperties/: table_info.json  test_info.json
acceptance_workloads/cc_003_delta_history/: table_info.json  test_info.json
acceptance_workloads/cc_004_case_insensitive_drop/: table_info.json  test_info.json
acceptance_workloads/cc_005_varchar_constraint/: table_info.json  test_info.json
acceptance_workloads/cc_006_basic_constraint/: table_info.json  test_info.json
acceptance_workloads/cc_007_multiple_constraints/: table_info.json  test_info.json
acceptance_workloads/cc_008_nested_constraint/: table_info.json  test_info.json
acceptance_workloads/cc_009_array_constraint/: test_info.json  (+1 more)
benchmarks/: Cargo.toml
delta-kernel-datafusion-engine/: Cargo.toml
delta-kernel-datafusion-engine/src/: error.rs  executor.rs  lib.rs
delta-kernel-datafusion-engine/src/compile/: expr_translator.rs  join.rs  load_sink.rs  mod.rs  scan.rs  window.rs  write_sink.rs
delta-kernel-datafusion-engine/src/exec/: literal.rs  mod.rs
delta-kernel-datafusion-engine/src/exec/shape/: apply_schema.rs  assert.rs  consume_kdf.rs  filter.rs  load_sink.rs  mod.rs  nullability_validation.rs  ordered_union.rs  partitioned_write.rs  project.rs  relation_sink.rs  row_index.rs  window_row_number.rs
delta-kernel-datafusion-engine/src/exec/sources/: file_listing.rs  mod.rs  relation_ref.rs
delta-kernel-datafusion-engine/tests/: acceptance_workload_reader_smoke.rs  checkpoint_v2_classic_df.rs  cross_engine_parity.rs  df_insert_commit_sm.rs  df_insert_sm.rs  fsr_declarative_sm.rs  fsr_real.rs  join_literals.rs  load_sink_and_schema_query.rs  parquet_field_id_parity.rs  partitioned_write_sink.rs  phase_operation_sm.rs  relation_and_kdf_sinks.rs  scan_correctness.rs  scan_log_replay_sm_df.rs  sm_kernel_reference_parity.rs  snapshot_full_state_fsr.rs  window_row_number.rs  write_sink.rs
doc/: datafusion_fsr_stack_landing.md
ffi/: FFI_CONNECTOR_GUIDE.md
ffi/examples/visit-plan/: CMakeLists.txt  plan.h  plan_print.h  test_filter.c  visit_plan.c
kernel/: Cargo.toml  build.rs
kernel-datafusion/: Cargo.toml  README.md  TEST_QUALITY_REPORT.md  USAGE.md  profile.json
kernel-datafusion/benches/: scan_metadata_bench.rs
kernel-datafusion/examples/: demo_output.rs  show_plans.rs
kernel-datafusion/src/: compile.rs  driver.rs  error.rs  executor.rs  expr.rs  json_parse.rs  lib.rs  scan.rs  scan_ext.rs  snapshot_builder.rs
kernel-datafusion/src/exec/: file_listing.rs  kdf_consume.rs  kdf_filter.rs  mod.rs  nullability_validation.rs  schema_query.rs
kernel-datafusion/src/exec/kdf/: consumer.rs  filter.rs
kernel-datafusion/tests/: integration_test.rs
proto/: function_registry.proto  plan.proto  schema.proto  state_machine.proto
scripts/: generate_additional_specs.py
(+25686 files in other folders)
