[package]
name = "delta-kernel-datafusion-engine"
description = "DataFusion-backed executor scaffold for Delta Kernel declarative plans (Phase 1.1)."
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Match default-executor: declarative IR + Arrow/Tokio engine so `delta_kernel::engine` and
# `delta_kernel::arrow` resolve consistently.
delta_kernel = { path = "../kernel", default-features = false, features = [
    "declarative-plans",
    "default-engine-rustls",
    "arrow",
] }

datafusion-common = { version = "53", default-features = false }
datafusion-execution = { version = "53", default-features = false }
datafusion-physical-expr = { version = "53", default-features = false }
datafusion-physical-plan = { version = "53", default-features = false }
datafusion-datasource = { version = "53", default-features = false }
datafusion-datasource-json = { version = "53", default-features = false }
datafusion-datasource-parquet = { version = "53", default-features = false }

futures = "0.3"
chrono = "0.4"
url = "2"

[dev-dependencies]
parquet = "58"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
